--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Women missionaries'
 - !lcc 'HQ'
 - !lcc 'BV'
+- GITenberg
 tableOfContents: Harriet Newell -- Ann H. Judson -- Elizabeth Hervey -- Harriet B.
   Stewart -- Sarah L. Smith -- Eleanor Macomber -- Sarah D. Comstock -- Henrietta
   Shuck -- Sarah B. Judson -- Mary E. Van Lennep.
